# faq-bot

./: .gitignore  README.md  docker-compose.yml
faq-bot/: .env  Dockerfile  pyproject.toml
faq-bot/faq_bot/plugins/berry/: .gitignore  __init__.py  main.typ
faq-bot/faq_bot/plugins/chat/: __init__.py  config.py  handle.py  util.py
faq-bot/faq_bot/plugins/off_topic/: __init__.py  off-topic.typ
faq-bot/faq_bot/plugins/search_faq/: __init__.py  by.py  by_minisearch_index.py  by_sitemap_html.py  config.py  handle.py
faq-bot/faq_bot/plugins/typst_compile/: __init__.py  clean.py  history.py  preprocess.py  typst.py
faq-bot/faq_bot/plugins/typst_doc/: __init__.py  by_official_docs.py
faq-bot/faq_bot/plugins/typst_universe/: __init__.py  handle.py
faq-bot/faq_bot/plugins/welcome/: __init__.py  welcome.typ
faq-bot/faq_bot/shared/search/: __init__.py  handle.py
faq-bot/faq_bot/shared/search/by/: __init__.py  mdbook_index.py  minisearch_index.py  sitemap_html.py
nonebot/: .env  pyproject.toml
